--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ article {
     width: 100%;
     max-width: 250px;
     border-radius: 0 3px 3px 0;
-    /*transform: translateX(-290px);*/
-    /*max-height: 30px;*/
+    transform: translateX(-290px);
+    max-height: 30px;
     transition: transform .3s ease, max-height 1s ease;
     overflow: hidden;
 }
@@ -117,4 +117,14 @@ input::-webkit-inner-spin-button {
 
 .hidden {
     display: none;
+}
+
+.user-post {
+    animation: background 5s ease;
+}
+
+@keyframes background {
+    0%   { background-color: antiquewhite; }
+    95% { background-color: antiquewhite; }
+    100% { background-color: #eeeeee; }
 }
